--- a/_themes/mattsoria/templates/project.html
+++ b/_themes/mattsoria/templates/project.html
@@ -1,7 +1,7 @@
 <div class="work project">
   <section class="section main_section">
     <div class="global_wrapper">
-      <article>
+      <article class="grid">
         <h2>{{ title }} {{ if siteurl }}<a class="visit_site" href="{{ siteurl }}">visit site<i class="icon-arrow-right"></i></a>{{ endif }}<span class="sub_header">{{ categories_list }} | {{ year }}</span></h2>
           <div class="featured_image">
             <span data-picture data-alt="{{ title }} - {{ categories_list }}">
