--- a/_themes/mattsoria/templates/work.html
+++ b/_themes/mattsoria/templates/work.html
@@ -2,7 +2,7 @@
   <div class="global_wrapper">
     <ul class="og-grid grid">
       {{ entries:listing folder="work" }}
-        <li>
+        <li class="grid_item">
           <a href="{{ url }}" data-largesrc="{{ largethumbnail }}" data-title="{{ title }}" data-category="{{ categories_list }}" data-description="{{ description }}">
             <img src="{{ thumbnail }}" alt="{{ title }}" />
           </a>
