--- a/_themes/mattsoria/css/mattsoria.css
+++ b/_themes/mattsoria/css/mattsoria.css
@@ -583,7 +583,7 @@ html {
 body {
   background: #262c2b;
   font-family: "europa", Helvetica, sans-serif;
-  background-image: url('../img/noise.png?1390027669');
+  background-image: url('../img/noise.png?1390277868');
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -ms-font-smoothing: antialiased;
@@ -624,7 +624,7 @@ a {
 }
 /* line 37, ../sass/helpers/_base.scss */
 a:active {
-  outline: medium none;
+  outline: none;
 }
 
 /* line 42, ../sass/helpers/_base.scss */
@@ -928,13 +928,13 @@ section:after {
 }
 
 @-webkit-keyframes fadeInDownBig {
-  /* line 4, ../sass/helpers/_animations.scss */
+  /* line 5, ../sass/helpers/_animations.scss */
   0% {
     opacity: 0;
     -webkit-transform: translateY(-2000px);
   }
 
-  /* line 7, ../sass/helpers/_animations.scss */
+  /* line 8, ../sass/helpers/_animations.scss */
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
@@ -942,13 +942,13 @@ section:after {
 }
 
 @-moz-keyframes fadeInDownBig {
-  /* line 14, ../sass/helpers/_animations.scss */
+  /* line 15, ../sass/helpers/_animations.scss */
   0% {
     opacity: 0;
     -moz-transform: translateY(-2000px);
   }
 
-  /* line 19, ../sass/helpers/_animations.scss */
+  /* line 20, ../sass/helpers/_animations.scss */
   100% {
     opacity: 1;
     -moz-transform: translateY(0);
@@ -956,13 +956,13 @@ section:after {
 }
 
 @-o-keyframes fadeInDownBig {
-  /* line 26, ../sass/helpers/_animations.scss */
+  /* line 27, ../sass/helpers/_animations.scss */
   0% {
     opacity: 0;
     -o-transform: translateY(-2000px);
   }
 
-  /* line 31, ../sass/helpers/_animations.scss */
+  /* line 32, ../sass/helpers/_animations.scss */
   100% {
     opacity: 1;
     -o-transform: translateY(0);
@@ -970,25 +970,73 @@ section:after {
 }
 
 @keyframes fadeInDownBig {
-  /* line 38, ../sass/helpers/_animations.scss */
+  /* line 39, ../sass/helpers/_animations.scss */
   0% {
     opacity: 0;
     transform: translateY(-2000px);
   }
 
-  /* line 43, ../sass/helpers/_animations.scss */
+  /* line 44, ../sass/helpers/_animations.scss */
   100% {
     opacity: 1;
     transform: translateY(0);
   }
 }
 
-/* line 49, ../sass/helpers/_animations.scss */
+/* line 50, ../sass/helpers/_animations.scss */
 .fadeInDownBig {
   -webkit-animation-name: fadeInDownBig;
   -moz-animation-name: fadeInDownBig;
   -o-animation-name: fadeInDownBig;
   animation-name: fadeInDownBig;
+}
+
+@-webkit-keyframes fadeAway {
+  /* line 58, ../sass/helpers/_animations.scss */
+  0% {
+    opacity: 1;
+  }
+
+  /* line 60, ../sass/helpers/_animations.scss */
+  100% {
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes fadeAway {
+  /* line 66, ../sass/helpers/_animations.scss */
+  0% {
+    opacity: 1;
+  }
+
+  /* line 70, ../sass/helpers/_animations.scss */
+  100% {
+    opacity: 0;
+  }
+}
+
+@-o-keyframes fadeAway {
+  /* line 76, ../sass/helpers/_animations.scss */
+  0% {
+    opacity: 1;
+  }
+
+  /* line 80, ../sass/helpers/_animations.scss */
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeAway {
+  /* line 86, ../sass/helpers/_animations.scss */
+  0% {
+    opacity: 1;
+  }
+
+  /* line 90, ../sass/helpers/_animations.scss */
+  100% {
+    opacity: 0;
+  }
 }
 
 /* line 1, ../sass/vendor/_floatlabeljs.scss */
@@ -1340,7 +1388,7 @@ pre.line-numbers > code {
   z-index: 10;
   width: 100%;
   background: #262c2b;
-  background-image: url('../img/noise.png?1390027669');
+  background-image: url('../img/noise.png?1390277868');
   -webkit-box-shadow: 0 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px rgba(0, 0, 0, 0.2);
@@ -2315,6 +2363,57 @@ form .submit {
 }
 
 /* line 42, ../sass/components/_forms.scss */
+#contact h3 {
+  color: #efecd2;
+  margin-bottom: 1rem;
+}
+
+/* line 48, ../sass/components/_forms.scss */
+.form_success {
+  width: 100%;
+  z-index: 30;
+  color: #262c2b;
+  padding: 1rem;
+  position: fixed;
+  text-align: center;
+  font-family: 700;
+  background: rgba(99, 214, 126, 0.9);
+}
+/* line 57, ../sass/components/_forms.scss */
+.form_success i {
+  cursor: pointer;
+  margin-left: 1rem;
+  font-size: 0.75rem;
+  display: inline-block;
+  -webkit-animation: fadeAway 4s;
+  -moz-animation: fadeAway 4s;
+  -ms-animation: fadeAway 4s;
+  -o-animation: fadeAway 4s;
+  animation: fadeAway 4s;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  -webkit-transition-delay: 0s;
+  -moz-transition: -moz-transform 0.3s ease 0s;
+  -o-transition: -o-transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s;
+}
+/* line 64, ../sass/components/_forms.scss */
+.form_success i:hover, .form_success i:focus {
+  -webkit-transform: translateY(-1px);
+  -moz-transform: translateY(-1px);
+  -ms-transform: translateY(-1px);
+  -o-transform: translateY(-1px);
+  transform: translateY(-1px);
+}
+/* line 67, ../sass/components/_forms.scss */
+.form_success i:active {
+  -webkit-transform: translateY(2px);
+  -moz-transform: translateY(2px);
+  -ms-transform: translateY(2px);
+  -o-transform: translateY(2px);
+  transform: translateY(2px);
+}
+
+/* line 74, ../sass/components/_forms.scss */
 .error-block li {
   color: #efecd2;
 }
@@ -2958,7 +3057,7 @@ form .submit {
 }
 /* line 27, ../sass/pages/_about.scss */
 .about .header_section {
-  background: url('../img/matt_soria.jpg?1390027603') center;
+  background: url('../img/matt_soria.jpg?1390277868') center;
 }
 /* line 29, ../sass/pages/_about.scss */
 .about .header_section h2 {
