--- a/_themes/mattsoria/css/mattsoria.css
+++ b/_themes/mattsoria/css/mattsoria.css
@@ -2439,10 +2439,10 @@ form .submit {
 }
 /* line 19, ../sass/pages/_home.scss */
 .home .recent_work .recent_work__item {
-  width: 100%;
   padding: 1rem;
   max-width: 400px;
-  margin: 1rem auto 0;
+  margin: 1rem -1rem 0;
+  width: calc(100% + 2rem);
   background: rgba(0, 0, 0, 0);
   outline: 3px solid rgba(0, 0, 0, 0);
   -webkit-transition: background 0.3s ease, outline 0.3s ease;
@@ -2615,23 +2615,73 @@ form .submit {
 /* line 49, ../sass/pages/_project.scss */
 .project .main_section article .featured_image {
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 /* line 54, ../sass/pages/_project.scss */
+.project .main_section article .project_details .project_features {
+  width: 100%;
+  padding: 1rem;
+  margin: 0 0 1rem;
+  font-size: 1rem;
+}
+/* line 32, ../sass/helpers/_mixins.scss */
+.project .main_section article .project_details .project_features:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+  font-size: 0;
+}
+/* line 60, ../sass/pages/_project.scss */
+.project .main_section article .project_details .project_features h3 {
+  float: left;
+  display: inline;
+  font-size: 1rem;
+}
+/* line 65, ../sass/pages/_project.scss */
+.project .main_section article .project_details .project_features ul {
+  display: inline;
+}
+/* line 68, ../sass/pages/_project.scss */
+.project .main_section article .project_details .project_features li {
+  float: left;
+  color: #4b5556;
+  padding: 0 1rem;
+  display: inline-block;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+}
+/* line 74, ../sass/pages/_project.scss */
+.project .main_section article .project_details .project_features li:first-of-type {
+  padding-left: 0;
+  border-left: none;
+}
+/* line 80, ../sass/pages/_project.scss */
+.project .main_section article .project_details h3 {
+  color: #4b5556;
+  text-align: left;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+/* line 87, ../sass/pages/_project.scss */
+.project .main_section article .project_details .grid p {
+  text-align: left;
+}
+/* line 93, ../sass/pages/_project.scss */
 .project .main_section article .grid p {
   text-align: center;
 }
-/* line 62, ../sass/pages/_project.scss */
+/* line 101, ../sass/pages/_project.scss */
 .project .recent_work h2 {
   color: #262c2b;
   text-shadow: none;
 }
-/* line 66, ../sass/pages/_project.scss */
+/* line 105, ../sass/pages/_project.scss */
 .project .recent_work .grid {
   margin: 0 -1rem;
   width: calc(100% + 2rem);
 }
-/* line 70, ../sass/pages/_project.scss */
+/* line 109, ../sass/pages/_project.scss */
 .project .recent_work .recent_work__item {
   width: 100%;
   padding: 1rem;
@@ -2640,11 +2690,11 @@ form .submit {
   max-width: 400px;
   position: relative;
 }
-/* line 77, ../sass/pages/_project.scss */
+/* line 116, ../sass/pages/_project.scss */
 .project .recent_work .recent_work__item img {
   display: block;
 }
-/* line 80, ../sass/pages/_project.scss */
+/* line 119, ../sass/pages/_project.scss */
 .project .recent_work .recent_work__item .project_label {
   padding: 0.25rem;
   text-align: left;
@@ -2659,13 +2709,13 @@ form .submit {
   -o-transition: margin 0.3s ease 0s;
   transition: margin 0.3s ease 0s;
 }
-/* line 89, ../sass/pages/_project.scss */
+/* line 128, ../sass/pages/_project.scss */
 .project .recent_work .recent_work__item .project_label h3 {
   margin: 0;
   color: white;
   font-size: 1rem;
 }
-/* line 94, ../sass/pages/_project.scss */
+/* line 133, ../sass/pages/_project.scss */
 .project .recent_work .recent_work__item .project_label .sub_header {
   height: 0;
   color: #ffda38;
@@ -2677,16 +2727,24 @@ form .submit {
   -o-transition: height 0.3s ease 0s;
   transition: height 0.3s ease 0s;
 }
-/* line 103, ../sass/pages/_project.scss */
+/* line 142, ../sass/pages/_project.scss */
 .project .recent_work .recent_work__item:hover .project_label, .project .recent_work .recent_work__item:focus .project_label, .project .recent_work .recent_work__item:active .project_label {
   margin-top: -3.333333333rem;
 }
-/* line 105, ../sass/pages/_project.scss */
+/* line 144, ../sass/pages/_project.scss */
 .project .recent_work .recent_work__item:hover .project_label .sub_header, .project .recent_work .recent_work__item:focus .project_label .sub_header, .project .recent_work .recent_work__item:active .project_label .sub_header {
   height: 1.5rem;
 }
 @media screen and (min-width: 43.75em) {
-  /* line 115, ../sass/pages/_project.scss */
+  /* line 157, ../sass/pages/_project.scss */
+  .project .main_section article .grid.project_details .grid_item {
+    padding: 0 0 0 2rem;
+  }
+  /* line 159, ../sass/pages/_project.scss */
+  .project .main_section article .grid.project_details .grid_item:first-of-type {
+    padding: 0 2rem 0 0;
+  }
+  /* line 168, ../sass/pages/_project.scss */
   .project .recent_work .recent_work__item {
     max-width: none;
   }
