--- a/_themes/mattsoria/sass/pages/_project.scss
+++ b/_themes/mattsoria/sass/pages/_project.scss
@@ -48,7 +48,46 @@
       }
       .featured_image {
         text-align: center;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
+      }
+      .project_details {
+        .project_features {
+          width: 100%;
+          padding: 1rem;
+          margin: 0 0 1rem;
+          font-size: $small;
+          @include clearfix();
+          h3 {
+            float: left;
+            display: inline;
+            font-size: $small;
+          }
+          ul {
+            display: inline;
+          }
+          li {
+            float: left;
+            color: $dark;
+            padding: 0 1rem;
+            display: inline-block;
+            border-left: 1px solid $rgba;
+            &:first-of-type {
+              padding-left: 0;
+              border-left: none;
+            }
+          }
+        }
+        h3 {
+          color: $dark;
+          text-align: left;
+          font-weight: $bold;
+          margin-bottom: 1rem;
+        }
+        .grid {
+          p {
+            text-align: left;
+          }
+        }
       }
       .grid {
         p {
@@ -111,6 +150,20 @@
   }
 
   @include min-screen($bpMed) {
+    .main_section {
+      article {
+        .grid {
+          &.project_details {            
+            .grid_item {
+              padding: 0 0 0 2rem;
+              &:first-of-type {
+                padding: 0 2rem 0 0;
+              }
+            }
+          }
+        }
+      }
+    }
     .recent_work {
       .recent_work__item {
         max-width: none;
