Updates, add todo to README

--- a/_themes/mattsoria/partials/footer.html
+++ b/_themes/mattsoria/partials/footer.html
@@ -42,10 +42,12 @@
             </div>
           </div>
         </div>
-        <blockquote id="tao">
-          <footer>
-            <cite>- Laozi -</cite>
-          </footer>
-        </blockquote>
       </div>
     </footer>
+    <section class="section tao_footer">
+      <blockquote id="tao">
+        <footer>
+          <cite>- Laozi -</cite>
+        </footer>
+      </blockquote>
+    </section>
