--- a/_themes/mattsoria/sass/mattsoria.scss
+++ b/_themes/mattsoria/sass/mattsoria.scss
@@ -23,6 +23,7 @@
 @import "components/recent-blog-posts";
 @import "components/relative-nav";
 @import "components/footer";
+@import "components/tao";
 @import "components/grid-expander";
 @import "components/play-item";
 @import "components/buttons";
