--- a/_themes/mattsoria/sass/pages/_about.scss
+++ b/_themes/mattsoria/sass/pages/_about.scss
@@ -38,6 +38,10 @@
       color: $black;
       margin-bottom: 1rem;
     }
+    hr {
+      color: $base;
+      background-color: $base;
+    }
     ul {
       padding-left: 1rem;
       li {
