--- a/_themes/mattsoria/partials/blog-nav.html
+++ b/_themes/mattsoria/partials/blog-nav.html
@@ -1,4 +1,4 @@
-<!--       <nav class="secondary_nav blog_nav">
+      <nav class="secondary_nav blog_nav">
         <ul>
           <li><a href="blog/categories"{{ if is_current || is_parent }} class="current"{{ endif }}>categories</a></li>
           <li><a href="blog/archive"{{ if is_current || is_parent }} class="current"{{ endif }}>archive</a></li>
@@ -13,4 +13,4 @@
             </ul>
           </li>
         </ul>
-      </nav> -->
+      </nav>
