--- a/_themes/mattsoria/sass/components/_footer.scss
+++ b/_themes/mattsoria/sass/components/_footer.scss
@@ -1,8 +1,8 @@
 // Footer
 
 .main_footer {
-  padding: 2rem;
   @include clearfix();
+  padding: 2rem 0 4rem;
   h2 {
     color: $base;
     font-weight: $medium;
@@ -122,22 +122,6 @@
     }
   }
 
-  #tao {
-    margin: 4rem 0 1rem;
-    p {
-      color: $light;
-      font-size: $small;
-      font-weight: $thin;
-      text-align: center;
-      font-style: italic;
-      font-family: $serif;
-    }
-    cite {
-      color: $dark;
-      display: block;
-      text-align: center;
-    }
-  }
 
   @include min-screen($bpSmall) {
     
