--- a/_themes/mattsoria/sass/components/_secondary_nav.scss
+++ b/_themes/mattsoria/sass/components/_secondary_nav.scss
@@ -1,6 +1,7 @@
 // Secondary Nav
 
 .secondary_nav {
+  padding-top: 3px;
   background: $dark;
   text-align: center;
   ul {
@@ -12,10 +13,10 @@
         font-size: $small;
         display: inline-block;
         padding: 0.5rem 1rem 0.7rem;
-        @include transition(color 0.1s ease 0s, box-shadow 0.1s ease 0s);
+        @include transition(color 0.2s ease 0s, background 0.2s ease 0s);
         &:hover, &:focus, &:active {
-          color: $white;
-          @include box-shadow(inset 0 0 0 3px $white);
+          color: $base;
+          background: $black;
         }
       }
       .subnav {
