--- a/_themes/mattsoria/sass/helpers/_base.scss
+++ b/_themes/mattsoria/sass/helpers/_base.scss
@@ -4,10 +4,12 @@
 }
 
 html {
+  height: 100%;
   font-size: 14px; //Rem base unit
 }
 
 body {
+  height: 100%;
   background: $black;
   font-family: $sans;
   background-image: $noise;
@@ -16,6 +18,7 @@ body {
 
 main {
   background: $light;
+  background-image: $noise;
 }
 
 .clearfix {
@@ -67,6 +70,7 @@ img {
 
 hr {
   height: 1px;
+  border: none;
   color: $rgba;
   margin: 2rem 0;
   background-color: $rgba;
