--- a/_themes/mattsoria/sass/helpers/_icons.scss
+++ b/_themes/mattsoria/sass/helpers/_icons.scss
@@ -68,6 +68,12 @@
 .icon-link:before {
   content: "\e61d";
 }
+.icon-uncategorized:before {
+  content: "\e601";
+}
+.icon-computers:before {
+  content: "\e602";
+}
 .icon-arrow-left:before {
   content: "\e62a";
 }
@@ -79,6 +85,33 @@
 }
 .icon-arrow-right:before {
   content: "\e62d";
+}
+.icon-t2:before {
+  content: "\54";
+}
+.icon-t1:before {
+  content: "\74";
+}
+.icon-s:before {
+  content: "\73";
+}
+.icon-r:before {
+  content: "\72";
+}
+.icon-o:before {
+  content: "\6f";
+}
+.icon-m:before {
+  content: "\6d";
+}
+.icon-i:before {
+  content: "\69";
+}
+.icon-a2:before {
+  content: "\41";
+}
+.icon-a1:before {
+  content: "\61";
 }
 .icon-search:before {
   content: "\e600";
