--- a/_themes/mattsoria/sass/helpers/_variables.scss
+++ b/_themes/mattsoria/sass/helpers/_variables.scss
@@ -8,9 +8,9 @@ $gray: #c2c2c2;
 $darkGray: #7c7c7c;
 $red: #E44B4B;
 $green: #63D67E;
-$base: #FFDA38; // #F97446; // #FFDB3D; // #F44013; // #EACB38; // #97B1B7; // #B7B397
-$light: #EFECD2; // #EAE4E0; // #EDEAC9; // #e8e8e8; // #CCD6D8; // #D8D5CC
-$dark: #4b5556; // #64B6C9 // #536468; // #80785C
+$base: #FFDA38;
+$light: #EFECD2;
+$dark: #4b5556;
 $rgba: rgba(0,0,0,0.20);
 
 // Breakpoints
@@ -20,4 +20,4 @@ $bpBig: 62.5em; // 1000px
 $bpHuge: 187.5em; // 3000px
 
 // Noise
-$noise: image-url('noise.png');
+$noise: url(http://api.thumbr.it/whitenoise-200x200.png?background=4ea6ca00&noise=1f1f1f&density=1&opacity=16);
