Adding kerning to css (http://blog.typekit.com/2014/02/05/kerning-on-the-web/)

--- a/_themes/mattsoria/sass/helpers/_base.scss
+++ b/_themes/mattsoria/sass/helpers/_base.scss
@@ -48,6 +48,11 @@ p {
   line-height: 1.5;
   font-size: $small;
   font-family: $serif;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "kern";
+  -webkit-font-feature-settings: "kern";
+  -moz-font-feature-settings: "kern";
+  -moz-font-feature-settings: "kern=1"; // http://blog.typekit.com/2014/02/05/kerning-on-the-web/
   a {
     color: $base;
     &:active {
@@ -80,6 +85,11 @@ hr {
 h1, h2 {
   color: $white;
   font-weight: $bold;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "kern";
+  -webkit-font-feature-settings: "kern";
+  -moz-font-feature-settings: "kern";
+  -moz-font-feature-settings: "kern=1"; // http://blog.typekit.com/2014/02/05/kerning-on-the-web/
   @include text-shadow(1px 1px $rgba);
   .sub_header {
     display: block;
