Updating about photo and fixing footer layout bug

--- a/_themes/mattsoria/partials/footer.html
+++ b/_themes/mattsoria/partials/footer.html
@@ -1,4 +1,4 @@
-    <footer class="section main_footer" role="contentinfo">
+    <footer class="section footer_main" role="contentinfo">
       <div class="global_wrapper">
         <div class="grid">
           <div class="links one-half-left">
