--- a/_themes/mattsoria/layouts/default.html
+++ b/_themes/mattsoria/layouts/default.html
@@ -37,13 +37,24 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <link rel="stylesheet" href="{{ theme:css }}">
     <script src="{{ theme:js src="libs/modernizr.custom.js" }}"></script>
+    <script type="text/javascript">
+      window._idl = {};
+      _idl.variant = "banner";
+      (function() {
+          var idl = document.createElement('script');
+          idl.type = 'text/javascript';
+          idl.async = true;
+          idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
+          document.getElementsByTagName('body')[0].appendChild(idl);
+      })();
+    </script>
   </head>
   <body class="{{ title|lower|slugify }}">
     {{ if {raven:success} }}
       <h3 class="form_success animated fadeInDownBig">Right on! Form sent - I'll get back to you soon! <i class="icon-close"></i></h3>
     {{ endif }}
     <header class="main_header" role="banner">
-        <h1><a href="{{ homepage }}">m<span class="mmmatt-a">a</span>tT sor<span class="mmmatt-i">i</span>A</a></h1>
+        <h1><a href="{{ homepage }}" class="wobble-top">m<span class="mmmatt-a">a</span>tT sor<span class="mmmatt-i">i</span>A</a></h1>
 	   {{ theme:partial src="nav" }}
     </header>
     <main role="main">
