Adding thedaywefightback.org banner

--- a/_themes/mattsoria/layouts/default.html
+++ b/_themes/mattsoria/layouts/default.html
@@ -37,17 +37,6 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <link rel="stylesheet" href="{{ theme:css }}">
     <script src="{{ theme:js src="libs/modernizr.custom.js" }}"></script>
-    <script type="text/javascript">
-      window._idl = {};
-      _idl.variant = "banner";
-      (function() {
-          var idl = document.createElement('script');
-          idl.type = 'text/javascript';
-          idl.async = true;
-          idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
-          document.getElementsByTagName('body')[0].appendChild(idl);
-      })();
-    </script>
   </head>
   <body class="{{ title|lower|slugify }}">
     {{ if {raven:success} }}
@@ -76,5 +65,10 @@
 	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	  })();
 	</script>
+  <!--[if !(lt IE 8)]><!-->
+     <script type="text/javascript">
+       (function(){var e=document.createElement("script");e.type="text/javascript";e.async=true;e.src=document.location.protocol+"//d1agz031tafz8n.cloudfront.net/thedaywefightback.js/widget.min.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})()
+     </script>
+  <!--<![endif]-->
   </body>
 </html>
