Removing dead blog nav

--- a/_themes/mattsoria/templates/blog.html
+++ b/_themes/mattsoria/templates/blog.html
@@ -1,4 +1,4 @@
-{{ theme:partial src="blog-nav" }}
+<!-- {{ theme:partial src="blog-nav" }} -->
 <section class="section recent_blogposts">
   <div class="global_wrapper">
     <ol>
