--- a/_themes/mattsoria/templates/post.html
+++ b/_themes/mattsoria/templates/post.html
@@ -1,5 +1,5 @@
     <div class="blog blog-post">
-      {{ theme:partial src="blog-nav" }}
+      <!-- {{ theme:partial src="blog-nav" }} -->
       <section class="section">
         {{ if featured-image }}
         <div class="featured_image"><img src="{{ featured-image }}" /></div>
