--- a/_themes/mattsoria/sass/components/_tao.scss
+++ b/_themes/mattsoria/sass/components/_tao.scss
@@ -8,7 +8,7 @@
   position: relative;
   height: calc(100% - 65px);
   background: image-url('footer/hero_1.jpg') no-repeat center center fixed;
-  background-size: 100% auto;
+  background-size: cover;
   &:before {
     top: 0.5rem;
     content: '';
