--- a/_themes/mattsoria/layouts/default.html
+++ b/_themes/mattsoria/layouts/default.html
@@ -43,7 +43,7 @@
       <h3 class="form_success animated fadeInDownBig">Right on! Form sent - I'll get back to you soon! <i class="icon-close"></i></h3>
     {{ endif }}
     <header class="main_header" role="banner">
-        <h1><a href="{{ homepage }}" class="wobble-top">m<span class="mmmatt-a">a</span>tT sor<span class="mmmatt-i">i</span>A</a></h1>
+        <h1><a href="{{ homepage }}" class="grow">m<span class="mmmatt-a">a</span>tT sor<span class="mmmatt-i">i</span>A</a></h1>
 	   {{ theme:partial src="nav" }}
     </header>
     <main role="main">
