Adding spam defending input to contact form

--- a/_themes/mattsoria/partials/contact.html
+++ b/_themes/mattsoria/partials/contact.html
@@ -41,5 +41,6 @@
     <label for="message">what would you like to say?</label>
     <textarea id="message" name="message" rows="4" aria-required="true"></textarea>
   </div>
+  <input type="text" name="Gotcha" style="display:none;" />
   <input type="submit" value="send" class="btn submit" />
 {{ /raven:form }}
