Updating availibility on about page, dashboard content

--- a/_themes/mattsoria/templates/about.html
+++ b/_themes/mattsoria/templates/about.html
@@ -4,7 +4,7 @@
   </div>
 </section>
 <section class="callout">
-  <h2 class="availability {{ availability }}">I am currently {{ availability }} for freelance work.</h2>
+  <h2 class="availability {{ availability }}">{{ availability-text }}</h2>
 </section>
 <section class="section main_section">
   <div class="global_wrapper">
