--- a/_themes/mattsoria/sass/components/_footer.scss
+++ b/_themes/mattsoria/sass/components/_footer.scss
@@ -11,10 +11,11 @@
     z-index: 0;
     position: relative;
     h3 {
-      margin-bottom: 0;
-      font-weight: $medium;
       color: $light;
+      margin-bottom: 0;
+      line-height: 1em;
       font-size: 1.5rem;
+      font-weight: $medium;
       @include transition(color 0.3s ease 0s);
       &:hover, &:active, &:focus {
         color: $base;
@@ -25,7 +26,7 @@
     }
     .social {
       @include clearfix();
-      margin: 2rem calc(-16.666666667% + 3rem);
+      margin: 1.8rem calc(-16.666666667% + 3rem);
       li {
         float: left;
         text-align: center;
