Changing colors, fixing tao footer, adding tweet button to blog posts

--- a/_themes/mattsoria/sass/components/_footer.scss
+++ b/_themes/mattsoria/sass/components/_footer.scss
@@ -4,7 +4,7 @@
   @include clearfix();
   padding: 2rem 2rem 4rem;
   h2 {
-    color: $base;
+    color: $highlight;
     font-weight: $medium;
   }
   .links {
@@ -18,7 +18,7 @@
       font-weight: $medium;
       @include transition(color 0.3s ease 0s);
       &:hover, &:active, &:focus {
-        color: $base;
+        color: $highlight;
       }
     }
     p {
@@ -109,6 +109,9 @@
         }
         &:hover, &:focus, &:active {
           @include translateY(-2px);
+          a {
+            border-color: $highlight;
+          }
         }
         a {
           height: 0;
@@ -118,6 +121,7 @@
           padding-bottom: 71%;
           display: inline-block;
           border: 3px solid $dark;
+          @include transition(border-color 0.2s ease 0s);
         }
       }
     }
