--- a/_themes/mattsoria/sass/components/_forms.scss
+++ b/_themes/mattsoria/sass/components/_forms.scss
@@ -24,7 +24,7 @@ form {
       margin-top: 0;
     }
     &:hover, &:focus, &:active {
-      border-color: $base;
+      border-color: $highlight;
     }
   }
 
