--- a/_themes/mattsoria/sass/components/_header.scss
+++ b/_themes/mattsoria/sass/components/_header.scss
@@ -4,9 +4,9 @@
   text-align: center;
   padding: 2rem 0 0.5rem;
   h1 {
-    color: $base;
     line-height: 1;
     font-size: $big;
+    color: $highlight;
     font-family: $mmm;
     margin: 0 0 1rem 0;
     font-weight: $regular;
