--- a/_themes/mattsoria/sass/helpers/_variables.scss
+++ b/_themes/mattsoria/sass/helpers/_variables.scss
@@ -8,7 +8,8 @@ $gray: #c2c2c2;
 $darkGray: #7c7c7c;
 $red: #E44B4B;
 $green: #63D67E;
-$base: #FFDA38;
+$highlight: #FFDA38;
+$base: #D1C7AB;
 $light: #EFECD2;
 $dark: #4b5556;
 $rgba: rgba(0,0,0,0.20);
