--- a/_themes/mattsoria/sass/pages/_about.scss
+++ b/_themes/mattsoria/sass/pages/_about.scss
@@ -58,7 +58,7 @@
   .colophon_section {
     background: $black;
     h2 {
-      color: $base;
+      color: $highlight;
     }
     p {
       color: $light;
@@ -67,7 +67,7 @@
   .twitter_section {
     background: #00acee;
     h2 {
-      color: $base;
+      color: $highlight;
       .sub_header {
         color: $dark;
       }
