--- a/_themes/mattsoria/sass/pages/_home.scss
+++ b/_themes/mattsoria/sass/pages/_home.scss
@@ -3,7 +3,7 @@
 .home {
   .intro {
     padding: 2rem;
-    background: $base;
+    background: $highlight;
     background-image: $noise;
     h2 {
       color: $black;
