--- a/_themes/mattsoria/sass/pages/_play.scss
+++ b/_themes/mattsoria/sass/pages/_play.scss
@@ -68,6 +68,7 @@
         color: $white;
         overflow: hidden;
         font-size: $small;
+        padding-left: 0.2em;
         white-space: nowrap;
         text-overflow: ellipsis;
       }
