--- a/_themes/mattsoria/templates/play-illustration.html
+++ b/_themes/mattsoria/templates/play-illustration.html
@@ -8,7 +8,7 @@
 <section class="section play_nav">
   {{ entries:previous folder="play" conditions="categories:illustration" }}
     {{ if !no_results }}
-      <a class="previous-entry" href="{{ url }}"><i class="icon-arrow-left"></i> previous</a>
+      <a class="previous-entry" href="{{ url }}"><i class="icon-arrow-left"></i> prev</a>
     {{ endif }}
   {{ /entries:previous }}
   {{ entries:next folder="play" conditions="categories:illustration" }}
