--- a/_themes/mattsoria/layouts/default.html
+++ b/_themes/mattsoria/layouts/default.html
@@ -20,7 +20,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>{{ _site_name }}</title>
+    <title>Matt Soria &#8226; {{ title }}</title>
     <meta name="description" content="The online internet website of Web Dood, Illustrationist, and Happy Person, Matt Soria." />
     <meta name="keywords" content="matt soria, web, design, tutorials, blog, art, illustration, illustrationist, development, frontend, front-end, freelance, digital nomad, photography, photographer, chicago, valparaiso, code, html, css, coder, writer, web industry" />
     <meta property="og:title" content="Matt Soria &#8226; Web Dood, Illustrationist, Happy Person." />
