--- a/_themes/mattsoria/sass/components/_buttons.scss
+++ b/_themes/mattsoria/sass/components/_buttons.scss
@@ -4,13 +4,13 @@
   margin: 0;
   border: none;
   color: $white;
-  background: $base;
   font-family: $sans;
   padding: 0.5rem 2rem;
   display: inline-block;
+  background: $highlight;
   @include translateY(0);
   border-bottom: 6px solid $rgba;
-  @include box-shadow(1px 1px $rgba);
+  @include box-shadow(0px 1px $rgba);
   @include text-shadow(1px 1px $rgba);
   &:hover, &:focus {
     margin-bottom: 1px;
