Adding SEO fields to pages and posts, fixing some mnor styles

--- a/_themes/mattsoria/layouts/default.html
+++ b/_themes/mattsoria/layouts/default.html
@@ -21,8 +21,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Matt Soria &#8226; {{ title }}</title>
-    <meta name="description" content="The online internet website of Web Dood, Illustrationist, and Happy Person, Matt Soria." />
-    <meta name="keywords" content="matt soria, web, design, tutorials, blog, art, illustration, illustrationist, development, frontend, front-end, freelance, digital nomad, photography, photographer, chicago, valparaiso, code, html, css, coder, writer, web industry" />
+    <meta name="description" content="{{ seo-description }}" />
+    <meta name="keywords" content="matt soria, web, design, tutorials, blog, art, illustration, illustrationist, development, frontend, front-end, freelance, digital nomad, photography, photographer, chicago, valparaiso, code, html, css, coder, writer, web industry, {{ seo-keywords }}" />
     <meta property="og:title" content="Matt Soria &#8226; Web Dood, Illustrationist, Happy Person." />
     <meta property="og:description" content="The online internet website of Web Dood, Illustrationist, and Happy Person, Matt Soria." />
     <meta name="twitter:card" content="The online internet website of Web Dood, Illustrationist, and Happy Person, Matt Soria." />
@@ -30,7 +30,7 @@
     <meta name="twitter:creator" content="@poopsplat" />
     <meta name="twitter:title" content="Matt Soria &#8226; Web Dood, Illustrationist, Happy Person." />
     <meta name="twitter:description" content="The online internet website of Web Dood, Illustrationist, and Happy Person, Matt Soria." />
-    <meta name="twitter:image" content="{{ theme:img src="favicon.png" }}" />
+    <meta name="twitter:image" content="favicon.png" />
 
     <link rel="shortcut icon" type="image/ico" href="favicon.png" />
     <script type="text/javascript" src="//use.typekit.net/elg0uuw.js"></script>
