--- a/_themes/mattsoria/sass/components/_header.scss
+++ b/_themes/mattsoria/sass/components/_header.scss
@@ -3,6 +3,7 @@
   color: $white;
   text-align: center;
   padding: 2rem 0 0.5rem;
+  @include clearfix();
   h1 {
     line-height: 1;
     font-size: $big;
